<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:transitionName="details"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#191926"
    android:padding="16dp"
    >
        <com.google.android.material.card.MaterialCardView
            android:id="@+id/card_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:transitionName="transition"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:clickable="true"
            android:focusable="true"
            android:transitionGroup="true"
            app:cardPreventCornerOverlap="false"

            >
                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="#191926"
                    tools:ignore="ExtraText">
                >

        <ImageView
            android:id="@+id/picture"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:src="@drawable/movie"
            app:layout_constraintTop_toTopOf="@id/mask"
            app:layout_constraintStart_toStartOf="@id/mask"
            app:layout_constraintEnd_toEndOf="@id/mask"
            app:layout_constraintBottom_toBottomOf="@+id/mask"
            android:contentDescription="@string/todo"/>
        <ImageView
            android:id="@+id/mask"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/mask"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:contentDescription="@string/todo"/>
        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/avengers_end_game"
            android:textColor="@color/white"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="@id/picture"
            app:layout_constraintStart_toStartOf="@id/picture"
            android:layout_marginStart="5dp"
            android:layout_marginTop="225dp"
             />
        <ImageView
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:id="@+id/like"
            android:src="@drawable/threedot"
            app:layout_constraintTop_toTopOf="@id/picture"
            app:layout_constraintStart_toStartOf="@id/picture"
            android:layout_marginTop="5dp"
            android:layout_marginStart="145dp"
            android:contentDescription="@string/todo"/>

        <TextView
            android:id="@+id/date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/avengers_date"
            android:textColor="@color/cardview_dark_background"
            app:layout_constraintTop_toBottomOf="@+id/name"
            app:layout_constraintStart_toStartOf="@id/name"
            android:layout_marginTop="15dp"
            android:textSize="11sp" />



        <TextView
            android:id="@+id/rate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@+id/oval"
            app:layout_constraintStart_toStartOf="@id/oval"
            app:layout_constraintBottom_toBottomOf="@+id/oval"
            app:layout_constraintEnd_toEndOf="@id/oval"
            android:text="79%"
            android:textColor="@color/white"
            android:textSize="12sp"
            />

        <ImageView
            android:id="@+id/oval"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/image_oval"
            android:layout_marginStart="90dp"
            app:layout_constraintTop_toBottomOf="@+id/name"
            app:layout_constraintStart_toStartOf="@id/name"
            android:layout_marginTop="5dp"
            android:contentDescription="TODO" />
                </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>