<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    >

    <data>
        <variable
            name="viewModel"
            type="com.example.homework1.presentation.viewModels.DetailsViewModel" />
        <variable
            name="viewLifecycleOwner"
            type="androidx.lifecycle.LifecycleOwner"/>
    </data>


    <ScrollView
        android:id="@+id/scroll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:transitionName="elementOflist">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#191926"
        android:orientation="vertical"
        tools:context=".presentation.viewModels.MovieDetailsFragment">
        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:transitionName="transition"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:clickable="true"
            android:focusable="true"
            android:transitionGroup="true"
            />
        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:visibility="visible" />
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/detail_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/actor_recycler_view"
/>


        <ImageView
            android:id="@+id/png_default"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:adjustViewBounds="true"
        android:contentDescription="@string/todo" />

    <TextView
        android:id="@+id/runtime_default"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/movie_name_text_default"
        app:layout_constraintStart_toEndOf="@id/time"
        />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/time"
            android:text="Runtime: "
            app:layout_constraintTop_toBottomOf="@id/movie_name_text_default"
            app:layout_constraintStart_toStartOf="@id/movie_name_text_default"
            android:visibility="gone"/>
        <TextView
            android:id="@+id/min"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=" min"
            app:layout_constraintStart_toEndOf="@id/runtime_default"
            app:layout_constraintTop_toBottomOf="@id/movie_name_text_default"
            android:visibility="gone"
/>
        <ImageView
            android:id="@+id/mask_avenger"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@id/png_default"
            app:layout_constraintEnd_toEndOf="@id/png_default"
            app:layout_constraintBottom_toBottomOf="@id/png_default"
            android:contentDescription="@string/todo"/>
    <TextView
        android:id="@+id/movie_name_text_default"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="16dp"
        app:layout_constraintTop_toBottomOf="@id/png_default" />

    <TextView
        android:id="@+id/janr_avengers"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textColor="#FF3466"
        android:textSize="14sp"
        android:textStyle="normal"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="16dp"
        app:layout_constraintTop_toBottomOf="@id/runtime_default" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/rating"
        android:text="Rate: "
        app:layout_constraintTop_toBottomOf="@+id/runtime_default"
        app:layout_constraintStart_toStartOf="@id/janr_avengers"
        android:visibility="gone"
        />
        <TextView
        android:id="@+id/rate_bar_default"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@+id/rating"
        app:layout_constraintStart_toEndOf="@id/rating"
         />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/percent"
            android:text="%"
            app:layout_constraintStart_toEndOf="@id/rate_bar_default"
            app:layout_constraintTop_toTopOf="@id/rate_bar_default"
            android:visibility="gone"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/budgett"
        android:text="@string/budget"
        app:layout_constraintTop_toBottomOf="@id/rate_bar_default"
        app:layout_constraintStart_toStartOf="@id/storyline_default"
        android:visibility="gone"
        />
        <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/budget"
        app:layout_constraintTop_toBottomOf="@id/rate_bar_default"
        app:layout_constraintStart_toEndOf="@id/budgett"
        />

    <TextView
        android:id="@+id/review_avengers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#6D6D80"
        android:textSize="14sp"
        android:textStyle="normal"
        app:layout_constraintStart_toEndOf="@id/rate_bar_default"
        app:layout_constraintTop_toBottomOf="@id/janr_avengers"

        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/storyline"
        android:text="@string/storyline"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@id/original_language"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="16dp"
        android:textSize="14sp"
        android:textStyle="bold"
        android:layout_marginTop="16dp"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/storyline_default"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/storyline"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="16dp"
        android:textColor="#B3FFFFFF"
        android:textStyle="normal" />
    <TextView
        android:id="@+id/cast_word"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Cast"
        android:textStyle="bold"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="@id/storyline"
        app:layout_constraintTop_toBottomOf="@id/storyline_default"
        android:visibility="gone"
        android:layout_marginTop="5dp"
        />
<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:id="@+id/release_word"
    app:layout_constraintTop_toBottomOf="@id/budget"
    app:layout_constraintStart_toStartOf="@id/rating"
    android:text="Release date: "
    android:visibility="gone"
    />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/release_date"
            android:textColor="@color/white"
            app:layout_constraintTop_toBottomOf="@id/budget"
            app:layout_constraintStart_toEndOf="@id/release_word"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/original_language"
            app:layout_constraintStart_toStartOf="@id/rating"
            android:text="Original language: "
            app:layout_constraintTop_toBottomOf="@id/release_date"
            android:visibility="gone"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/language"
            app:layout_constraintTop_toBottomOf="@id/release_date"
            app:layout_constraintStart_toEndOf="@id/original_language"
    />
        <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#00000000"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/png_default"
        android:text="@string/back"
        android:textColor="#6D6D80"
        android:id="@+id/back_btn"
        android:layout_marginTop="30dp"
            />
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/actor_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cast_word"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:orientation="horizontal"
            android:layout_marginTop="5dp"
            />
</androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</layout>
